# gitnit

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix  justfile
src/: main.rs
